--- a/exemplo.yml
+++ b/exemplo.yml
@@ -1,2 +1,11 @@
+spring:
+  datasource:
+    url:
+    username:
+    password: 
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: create-drop
 server:
   port: 8765
