--- a/exemplo.yml
+++ b/exemplo.yml
@@ -1,11 +1,12 @@
 spring:
-  datasource:
-    url:
-    username:
-    password: 
+  datasource: 
+    url: jdbc:postgresql://localhost:5432/hogwarts
+    username: postgres  
+    password: password
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: create-drop
 server:
   port: 8765
+
