--- a/exemplo.yml
+++ b/exemplo.yml
@@ -1,6 +1,6 @@
 spring:
   datasource: 
-    url: jdbc:postgresql://localhost:5432/hogwarts
+    url: jdbc:postgresql://localhost:5432/exemplos
     username: postgres  
     password: password
   jpa:
